# kiokun-data

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_10_SHARD_SYSTEM.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  CLOUDFLARE_PAGES_SETUP.md  Cargo.toml  DEFLATE_COMPRESSION.md  DEPLOYMENT_GUIDE.md  FEATURE_IDEAS.md  HOSTING_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  JMNEDICT_INTEGRATION_COMPLETE.md  MIGRATION-TO-23-SHARDS.md  Notes.csv  R2_COST_CALCULATOR.md  R2_UPLOAD_OPTIMIZATION.md  README.md  README_TYPES.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SEARCH_SETUP_QUICKSTART.sh  SHARDING.md  SHARDING_GUIDE.md  SHARDING_VERIFICATION.md  TODO.md  UNIFIED_DEFINITIONS_PLAN.md  build.sh  convert_csv_to_sql.py  convert_notes_to_json.py  fix_japanese_types.py  inspect_results.py  inspect_unified_entries.rs  labels.json  notes.json  test_japanese_types.rs  test_sharding.sh  variant_failure_analysis.md
analysis/: STROKE_LIBRARY_COMPARISON.md  analyze_han1_len1_split  analyze_han1_len1_split.rs  analyze_han2_len2_split  analyze_han2_len2_split.rs  analyze_kana_split  analyze_kana_split.rs  analyze_shard_distribution  analyze_shard_distribution.rs  animcjk_coverage_results.json  check_animcjk_coverage.py  stroke_library_coverage.json  stroke_test_output.txt  test_all_stroke_libraries.py
card-game/: README_CARD_GAME.md
compression-benchmark/: COMPLETE_RESULTS.md  Cargo.toml  README.md  RESULTS.md  SUMMARY.md  benchmark.js  index.html  sample.json  sample.json.br1  sample.json.br11  sample.json.br6  sample.json.deflate1  sample.json.deflate6  sample.json.deflate9  sample.json.gz1  sample.json.gz6  sample.json.gz9  sample.json.lz4  sample.json.snappy  sample.json.zst1  sample.json.zst10  sample.json.zst19  server.js
data/: jmdict-examples-eng-3.6.1.json  kanjidic2-en-3.6.1.json
docs/: CDP_INTEGRATION.md  CHARACTER_INTEGRATION.md  GLYPH_DETECTION.md  IDS_INTEGRATION.md
game-concepts/: README.md
output/: j2c_mapping.json
schemas/: japanese_types.rs  japanese_types_fixed.rs  japanese_types_optimal.rs
scripts/: IMPORT_NOTES.md  create-github-repos.sh  expand-json.js  extract_labels.js  generate_character_mapping.py  (+12 more)
(+243 files in other folders)
