[package]
name = "dictionary-merger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
regex = "1.0"

[[bin]]
name = "merge_dictionaries"
path = "src/main.rs"

# Optimize for maximum runtime performance
[profile.release]
lto = "fat"            # Full LTO - maximum optimization
codegen-units = 1      # Single codegen unit for better optimization
opt-level = 3          # Maximum optimization level
strip = true           # Remove debug symbols for smaller binary
panic = "abort"        # Smaller binary, slightly faster (no unwinding)

