[package]
name = "dictionary-merger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
regex = "1.0"

[[bin]]
name = "merge_dictionaries"
path = "src/main.rs"

# Optimized for fastest total time (build + run)
# Since runtime is I/O bound (95% disk writes), LTO doesn't help
# Keeping default release settings for fast builds
[profile.release]
opt-level = 3          # Maximum optimization (default for release)
# lto = false         # No LTO - faster builds, runtime is I/O bound anyway
# codegen-units = 16  # Default - parallel compilation for faster builds

